fix(cicd): Updated gcloud_service_key

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,8 @@ jobs:
     resource_class: xlarge
     steps:
       - checkout
-      - gcp-gcr/gcr-auth
+      - gcp-gcr/gcr-auth:
+          gcloud_service_key: $GOOGLE_CREDENTIALS
       - gcp-gcr/build-image:
           image: jur-chain
           no_output_timeout: 20m
