--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,12 +5,22 @@ orbs:
   docker: circleci/docker@1.7.0
   gcp-gcr: circleci/gcp-gcr@0.15.1
 
+# Commands
+commands:
+  install_latest_terraform:
+    description: "Install latest terraform"
+    steps:
+      - run:
+          name: Install latest terraform
+          command: wget -nv https://releases.hashicorp.com/terraform/1.4.5/terraform_1.4.5_linux_amd64.zip && unzip terraform_1.4.5_linux_amd64.zip && mv terraform /usr/local/bin && terraform -v
+
 jobs:
   validate_infrastructure:
     description: "Validate Infrastructure"
     executor: terraform/default
     steps:
       - checkout
+      - install_latest_terraform
       - terraform/init:
           path: infrastructure
       - terraform/validate:
@@ -24,6 +34,7 @@ jobs:
     executor: terraform/default
     steps:
       - checkout
+      - install_latest_terraform
       - terraform/plan:
           backend_config: "prefix=staging-l1-jur-node"
           path: infrastructure
