fix(cicd): test deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,21 +107,21 @@ jobs:
 workflows:
   staging:
     jobs:
-      - validate_infrastructure:
-          filters:
-            branches:
-              only: feat/cicd
-      - approve_infrastructure:
-          description: "Approve Infrastructure"
-          type: approval
-          requires:
-            - validate_infrastructure
-      - apply_infrastructure:
-          requires:
-            - approve_infrastructure
-      - build_and_push_docker_image:
-          requires:
-            - apply_infrastructure
-      - deploy:
-          requires:
-            - build_and_push_docker_image
+      # - validate_infrastructure:
+      #     filters:
+      #       branches:
+      #         only: feat/cicd
+      # - approve_infrastructure:
+      #     description: "Approve Infrastructure"
+      #     type: approval
+      #     requires:
+      #       - validate_infrastructure
+      # - apply_infrastructure:
+      #     requires:
+      #       - approve_infrastructure
+      # - build_and_push_docker_image:
+      #     requires:
+      #       - apply_infrastructure
+      - deploy
+        # requires:
+        #   - build_and_push_docker_image
