--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,12 +32,9 @@ commands:
       - run:
           name: Prepare SSH metadata for GCP 🦌
           command: |
-            echo $MTM > key.json
-            gcloud auth activate-service-account --key-file=key.json
-            gcloud auth configure-docker
             gcloud compute scp deploy.sh << parameters.instance >>:deploy.sh --zone=<< parameters.zone >>
             gcloud compute ssh  << parameters.instance >> --command "chmod +x deploy.sh" --zone << parameters.zone >>
-            gcloud compute ssh  << parameters.instance >> --command "./deploy.sh ${DO_REGISTRY_TOKEN} ${<< parameters.aura_keyset >>} ${<< parameters.granpa_keyset >>}" --zone << parameters.zone >>
+            gcloud compute ssh  << parameters.instance >> --command "./deploy.sh ${GCLOUD_SERVICE_KEY} ${<< parameters.aura_keyset >>} ${<< parameters.granpa_keyset >>}" --zone << parameters.zone >>
   # Jobs
 jobs:
   validate_infrastructure:
