--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ commands:
       - run:
           name: Prepare SSH metadata for GCP 🦌
           command: |
-            gcloud compute scp deploy.sh << parameters.instance >>:deploy.sh --zone=<< parameters.zone >>
+            gcloud --quiet compute scp deploy.sh << parameters.instance >>:deploy.sh --zone=<< parameters.zone >> --strict-host-key-checking=no
             gcloud compute ssh  << parameters.instance >> --command "chmod +x deploy.sh" --zone << parameters.zone >>
             gcloud compute ssh  << parameters.instance >> --command "./deploy.sh ${GCLOUD_SERVICE_KEY} ${<< parameters.aura_keyset >>} ${<< parameters.granpa_keyset >>}" --zone << parameters.zone >>
   # Jobs
