--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,8 +30,9 @@ commands:
           name: Prepare SSH metadata for GCP 🦌
           command: |
             echo $GCLOUD_SERVICE_KEY > key.json
-            gcloud --quiet compute scp key.json circleci@<< parameters.instance >>:key.json --zone=<< parameters.zone >> 
-            gcloud --quiet compute scp deploy.sh circleci@<< parameters.instance >>:deploy.sh --zone=<< parameters.zone >> 
+            gcloud --quiet compute scp key.json circleci@<< parameters.instance >>:key.json --zone=<< parameters.zone >>
+            gcloud --quiet compute scp deploy.sh circleci@<< parameters.instance >>:deploy.sh --zone=<< parameters.zone >>
+            gcloud --quiet compute scp docker-compose.yml circleci@<< parameters.instance >>:docker-compose.yml --zone=<< parameters.zone >>
             gcloud --quiet compute ssh  circleci@<< parameters.instance >> --command "chmod +x deploy.sh" --zone << parameters.zone >>
             gcloud --quiet compute ssh  circleci@<< parameters.instance >> --command "./deploy.sh" --zone << parameters.zone >>
             gcloud --quiet compute ssh  circleci@<< parameters.instance >> --command "rm -f key.json" --zone << parameters.zone >>
