--- a/deployment/nginx/config/default.conf
+++ b/deployment/nginx/config/default.conf
@@ -1,7 +1,18 @@
 server {
-    server_name _;
+    listen 443;
+    listen [::]:443;
+    ssl_certificate         /etc/ssl/certs/cert.pem;
+    ssl_certificate_key     /etc/ssl/certs/key.pem;
+    server_name testnet.jur.io;
+
+    index index.html;
 
     location / {
+	root /home/circleci/html;
+        try_files $uri $uri/ =404;
+    }
+
+    location /ws/ {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
