--- a/deployment/nginx/config/default.conf
+++ b/deployment/nginx/config/default.conf
@@ -8,7 +8,7 @@ server {
     index index.html;
 
     location / {
-	root /home/circleci/html;
+	    root /html;
         try_files $uri $uri/ =404;
     }
 
