fix(cicd): cloudflare origin pull added

--- a/deployment/nginx/config/default.conf
+++ b/deployment/nginx/config/default.conf
@@ -1,9 +1,12 @@
 server {
     listen 443;
     listen [::]:443;
-    ssl_certificate         /etc/ssl/certs/cert.pem;
+    ssl_certificate         /etc/ssl/certs/testnet.jur.crt;
     ssl_certificate_key     /etc/ssl/certs/key.pem;
     server_name testnet.jur.io;
+
+    ssl_client_certificate /etc/ssl/cloudflare.crt;
+    ssl_verify_client on;
 
     index index.html;
 
