fix(cicd): cirt path updated

--- a/deployment/nginx/config/default.conf
+++ b/deployment/nginx/config/default.conf
@@ -5,7 +5,7 @@ server {
     ssl_certificate_key     /etc/ssl/certs/key.pem;
     server_name testnet.jur.io;
 
-    ssl_client_certificate /etc/ssl/cloudflare.crt;
+    ssl_client_certificate /etc/ssl/certs/cloudflare.crt;
     ssl_verify_client on;
 
     index index.html;
