--- a/deployment/nginx/config/default.conf
+++ b/deployment/nginx/config/default.conf
@@ -1,6 +1,6 @@
 server {
-    listen 443;
-    listen [::]:443;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
     ssl_certificate         /etc/ssl/certs/testnet.jur.crt;
     ssl_certificate_key     /etc/ssl/certs/key.pem;
     server_name testnet.jur.io;
