--- a/deployment/nginx/config/default.conf
+++ b/deployment/nginx/config/default.conf
@@ -10,20 +10,9 @@ server {
 
     index index.html;
 
-    location / {
-	    root /html;
-        try_files $uri $uri/ =404;
-    }
-
-    location /ws/ {
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_pass http://jur-node:9945/;
-        proxy_set_header HOST $host;
-        proxy_set_header Referer $http_referer;
-        proxy_set_header X-Forwarded-For $remote_addr;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    location /health {
+        return 200 'Healthy!';
+        add_header Content-Type text/plain;
     }
 
     location /rpc/ {
@@ -31,6 +20,17 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_pass http://jur-node:9933/;
+        proxy_set_header HOST $host;
+        proxy_set_header Referer $http_referer;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location / {
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_pass http://jur-node:9945/;
         proxy_set_header HOST $host;
         proxy_set_header Referer $http_referer;
         proxy_set_header X-Forwarded-For $remote_addr;
