fix(cicd): enabled full workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,19 +105,21 @@ jobs:
 workflows:
   staging:
     jobs:
-      # - validate_infrastructure:
-      #     filters:
-      #       branches:
-      #         only: feat/cicd
-      # - approve:
-      #     description: "Approve"
-      #     type: approval
-      #     requires:
-      #       - validate_infrastructure
-      # - apply_infrastructure:
-      #     requires:
-      #       - approve
-      # - build_and_push_docker_image:
-      #     requires:
-      #       - apply_infrastructure
-      - deploy_to_staging
+      - validate_infrastructure:
+          filters:
+            branches:
+              only: feat/cicd
+      - approve:
+          description: "Approve"
+          type: approval
+          requires:
+            - validate_infrastructure
+      - apply_infrastructure:
+          requires:
+            - approve
+      - build_and_push_docker_image:
+          requires:
+            - apply_infrastructure
+      - deploy_to_staging:
+          requires:
+            - build_and_push_docker_image
