--- a/deployment/nginx/config/testnet.conf
+++ b/deployment/nginx/config/testnet.conf
@@ -15,54 +15,34 @@ server {
         add_header Content-Type text/plain;
     }
 
-    location /rpc/ {
+    location /rpc {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        proxy_pass http://jur-node:9933/;
+        proxy_pass http://jur-node:9933;
         proxy_set_header HOST $host;
         proxy_set_header Referer $http_referer;
         proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /ws {
+        proxy_buffering off;
+        proxy_pass http://localhost:9944;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 
     location / {
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_pass http://jur-node:9945/;
-        proxy_set_header HOST $host;
-        proxy_set_header Referer $http_referer;
-        proxy_set_header X-Forwarded-For $remote_addr;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
-
-server {
-    server_name testnet-connect.jur.io;
-
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-
-    ssl_certificate         /etc/ssl/certs/origin-server.crt;
-    ssl_certificate_key     /etc/ssl/certs/origin-server.pem;
-
-    ssl_client_certificate /etc/ssl/certs/cloudflare.crt;
-    ssl_verify_client on;
-
-    location /health {
-        return 200 'Healthy!';
-        add_header Content-Type text/plain;
-    }
-
-    location / {
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_pass http://jur-node:30333/;
-        proxy_set_header HOST $host;
-        proxy_set_header Referer $http_referer;
-        proxy_set_header X-Forwarded-For $remote_addr;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_buffering off;
+        proxy_pass http://localhost:30333;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
