--- a/deployment/docker-compose-testnet.yml
+++ b/deployment/docker-compose-testnet.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - 80:80
       - 443:443
-    restart: always
+    restart: unless-stopped
     depends_on:
       - jur-node
   jur-node:
@@ -18,8 +18,4 @@ services:
     working_dir: /res
     volumes:
       - ../res:/res
-    ports:
-      - 30333:30333
-      - 9933:9933
-      - 9944:9944
     restart: unless-stopped
